Mon May 31 18:22:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-mode-set-encoding): skip shebang line
	  always regardless of ruby.

Mon May 31 04:03:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): check if expanded dname encoding is
	  compatible with fname, not just copying.  [ruby-core:30516]

	* test/ruby/test_beginendblock.rb (test_endblockwarn): needs
	  encoding comment.

Mon May 31 01:28:58 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/delegate: Delegator: combine (public|protected) methods with
	  those of the delegated object. [ruby-core:27224]
	  DelegateClass: combine (public|protected) instance methods
	  with those of the delegated superclass.

Sun May 30 22:14:14 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/set.rb (keep_if, select!): New methods [ruby-core:29749]

Sun May 30 19:17:31 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: updated to b856dd07.
	  this cleans warnings.

Sun May 30 18:49:45 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/rdoc/generator/template/darkfish/classpage.rhtml:
	  fix encoding value of XML declaration. [ruby-dev:41452]

Sun May 30 03:40:44 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_tokadd_utf8, parser_tokadd_string): allow NUL
	  containing symbol literals, as well as String#to_sym.
	  [ruby-dev:41447]

Sun May 30 02:21:34 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/zlib/zlib.c (zstream_append_input2): add RB_GC_GUARD.
	  This caused failure when test/csv is executed with GC.stress = true.

Sun May 30 00:02:39 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* gc.c (force_chain_object, rb_objspace_call_finalizer): delete
	  finalizer entry after corresponding finalizer is executed.
	  This caused SEGV when test/cgi is executed with GC.stress = true.

Sat May 29 23:30:33 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* string.c (str_replace_shared): change embedded state atomically.